--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
-    #- uses: ./
-    #- name: build
-    #  run: build
+    
+    - name: build
+      uses: ./
+      run: build
