--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,4 +10,4 @@ jobs:
     
     - name: build
       uses: docker://moredip/todo-backend-site:master
-      args: build
+      entrypoint: rake build
